--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.androidtutorialpoint.volleytutorial"
-        minSdkVersion 15
+        applicationId "info.santhosh.omdbsearchclient"
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -19,9 +19,23 @@ android {
     }
 }
 
+ext{
+    //version numbers
+    junitVersion = '4.12'
+    supportLibVersion = '23.3.0'
+    retroFitVersion= '2.0.2'
+    glideVersion='3.7.0'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.volley:volley:1.0.0'
+    testCompile "junit:junit:${junitVersion}"
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:gridlayout-v7:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.squareup.retrofit2:retrofit:${retroFitVersion}"
+    compile "com.squareup.retrofit2:converter-gson:${retroFitVersion}"
+    compile "com.github.bumptech.glide:glide:${glideVersion}"
 }
