--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,7 @@
-# Built application files
-/*/build/
-/build
-
-# Crashlytics configuations
-com_crashlytics_export_strings.xml
-
-# Local configuration file (sdk path, etc)
-local.properties
-gradle.properties
-app/google-services.json
-
-# Gradle generated files
-.gradle/
-
-# Signing files
-.signing/
-
-# User-specific configurations
-.idea/
-*.iml
-
-# OS-specific files
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+/build
+/captures
