--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
-        applicationId "info.santhosh.omdbsearchclient"
-        minSdkVersion 16
+        applicationId "com.androidtutorialpoint.volleytutorial"
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -29,13 +29,8 @@ ext{
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile "junit:junit:${junitVersion}"
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.volley:volley:1.0.0'
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
-    compile "com.android.support:gridlayout-v7:${supportLibVersion}"
-    compile "com.android.support:cardview-v7:${supportLibVersion}"
-    compile "com.android.support:design:${supportLibVersion}"
-    compile "com.squareup.retrofit2:retrofit:${retroFitVersion}"
-    compile "com.squareup.retrofit2:converter-gson:${retroFitVersion}"
-    compile "com.github.bumptech.glide:glide:${glideVersion}"
 }
